# STORK

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
candidate_collector/: LICENSE.txt  MANIFEST.in  README.md  requirements.txt  requirements_dev.txt  setup.cfg
endpoint_analyzer/: README.md  pyproject.toml  setup.cfg
extension/: background.js  detect.js  manifest.json  overwrite.js  popup.html  popup.js
indicators/: catalog.json  prepared_hkeys.csv  prepared_pkeys.csv  prepared_qkeys.csv
or_scanner/: requirements.txt  setup.cfg
or_scanner/examples/: builder.py  driver.py  filter.py  paylaods.py  strats.py
or_scanner/src/or_scanner/: __init__.py  _candidate_builder.py
or_scanner/src/or_scanner/drivers/: __init__.py  _base.py  _nop.py  _playwright.py  _selenium.py
or_scanner/src/or_scanner/logging/: __init__.py  logging.yaml
or_scanner/src/or_scanner/strats/filter/: __init__.py  _base.py  _endpoint_filter.py  _heuristics.py
or_scanner/src/or_scanner/strats/payload/: __init__.py  _base.py  _blacklist_payloads.py  _ip_payloads.py  _misc_payloads.py  _utils.py  _whitelist_payloads.py
or_scanner/src/or_scanner/strats/url/: __init__.py  _base.py  _param_pollution_id.py  _path_id.py  _path_single.py  _qkey_id.py  _qkey_single.py  _url_id.py  _url_single.py
or_scanner/src/or_scanner/utils/: misc.py
payloads/: openredirect_v1.txt
pipeline/: README.md  requirements.txt
pipeline/configs/: backup.cfg  (+2 more)
verification_backend/: Dockerfile  docker-compose.yml  gunicorn.sh  requirements.txt  run_dev.sh
vuln_app/: requirements.txt  run_dev.sh
(+90 files in other folders)
