[metadata]
name = or_scanner
version = 0.0.0
license = MIT
license_file = LICENSE.txt
description = Scan URLs for common or vulnerability patterns
long_description = file: README.md
author = Kai Glauber

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
  pyyaml
  requests
  selenium
  webdriver-manager
  xvfbwrapper
  playwright

[options.packages.find]
where = src

[options.package_data]
or_scanner.data =
    *.txt

[option.extras_require]
testing =
    pytest-datadir
    requests-mock
    pytest
    pytest-cov
    mypy
    flake8

[mypy]
files = src/or_scanner
python_version = 3.9
show_error_codes = True
allow_redefinition = True
disallow_subclassing_any = False
no_implicit_optional = True
local_partial_types = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
ignore_missing_imports = True
